implemented trading algorithm, includes a lot of refactoring